# P3A

./: .gitignore  CMakeLists.txt  CMakeLists_PCSSver.txt  PRO  PROcxcxcx  README.md  berths.txt  calculate_speedup.py  create_file_system.sh  del_compiled.sh  delete.sh  diff_inst_mean_alg_time.py  evaluator.cpp  file_system.py  file_system_v2.py  get_inst_time.py  hb_instance.json  main  main.cpp  p3a_config.json  p3ascr.sh  p3ascr_v2_const_p_diff_inst.sh  proc_standard.sh  readme.md  rt_instance.json  sh_instance.json  ships_algo.cpp  si_instance.json  transfer_output_files.sh  v2_p3ascr_const_p_diff_inst.sh
GENERATOR/: generator.cpp  hb_gen  hb_instance_lnorm-logis.json  inst_gen.sh  rt_gen  rt_instance_lnorm-logis.json  sh_gen  sh_instance_lnorm-logis.json  si_gen  si_instance_lnorm-logis.json
hb_rt_sh_si-results/: 10proc50to10inst_step10-hb.txt  10proc50to10inst_step10-rt.txt  10proc50to10inst_step10-sh.txt  10proc50to10inst_step10-si.txt  1proc50to10inst_step5-hb.txt  1proc50to10inst_step5-rt.txt  1proc50to10inst_step5-sh.txt  1proc50to10inst_step5-si.txt  5proc50to10inst_step5-hb.txt  5proc50to10inst_step5-rt.txt  5proc50to10inst_step5-sh.txt  5proc50to10inst_step5-si.txt  diff_inst_mean_alg_time.py
instances/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt
instances_hb/: instance0.txt  instance1.txt  instance10.txt  instance11.txt  instance12.txt  instance13.txt  instance14.txt  instance15.txt  instance16.txt  instance17.txt  instance18.txt  instance19.txt  instance2.txt  instance20.txt  instance21.txt  instance22.txt  instance23.txt  instance24.txt  instance25.txt  instance26.txt  instance27.txt  instance28.txt  instance29.txt  instance3.txt  instance30.txt  instance31.txt  instance32.txt  instance33.txt  instance34.txt  instance35.txt  instance36.txt  instance37.txt  instance38.txt  instance39.txt  instance4.txt  instance40.txt  instance41.txt  instance42.txt  instance43.txt  instance44.txt  (+60 more)
instances_lh/: instance0.txt  instance1.txt  instance10.txt  instance11.txt  instance12.txt  instance13.txt  instance14.txt  instance15.txt  instance16.txt  instance17.txt  instance18.txt  instance19.txt  instance2.txt  instance20.txt  instance21.txt  instance22.txt  instance23.txt  instance24.txt  instance25.txt  instance26.txt  instance27.txt  instance28.txt  instance29.txt  instance3.txt  instance30.txt  instance31.txt  instance32.txt  instance33.txt  instance34.txt  instance35.txt  instance36.txt  instance37.txt  instance38.txt  instance39.txt  instance4.txt  instance40.txt  instance41.txt  instance42.txt  instance43.txt  instance44.txt  (+60 more)
instances_rt/: instance0.txt  instance1.txt  instance10.txt  instance11.txt  instance12.txt  instance13.txt  instance14.txt  instance15.txt  instance16.txt  instance17.txt  instance18.txt  instance19.txt  instance2.txt  instance20.txt  instance21.txt  instance22.txt  instance23.txt  (+83 more)
(+305 files in other folders)
